step 2 summary modified + markdowns fixed // step four summary modified

--- a/Step Four - Preprocessing and Training/04_preprocessing_and_training.ipynb
+++ b/Step Four - Preprocessing and Training/04_preprocessing_and_training.ipynb
@@ -2737,7 +2737,7 @@
        "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
        "                ('selectkbest',\n",
        "                 SelectKBest(k=10,\n",
-       "                             score_func=<function f_regression at 0x00000142BC330828>)),\n",
+       "                             score_func=<function f_regression at 0x00000165D5F61828>)),\n",
        "                ('linearregression',\n",
        "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
        "                                  normalize=False))],\n",
@@ -2878,7 +2878,7 @@
        "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
        "                ('selectkbest',\n",
        "                 SelectKBest(k=15,\n",
-       "                             score_func=<function f_regression at 0x00000142BC330828>)),\n",
+       "                             score_func=<function f_regression at 0x00000165D5F61828>)),\n",
        "                ('linearregression',\n",
        "                 LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
        "                                  normalize=False))],\n",
@@ -3216,7 +3216,7 @@
        "                                                       with_std=True)),\n",
        "                                       ('selectkbest',\n",
        "                                        SelectKBest(k=10,\n",
-       "                                                    score_func=<function f_regression at 0x00000142BC330828>)),\n",
+       "                                                    score_func=<function f_regression at 0x00000165D5F61828>)),\n",
        "                                       ('linearregression',\n",
        "                                        LinearRegression(copy_X=True,\n",
        "                                                         fit_intercept=True,\n",
@@ -4472,128 +4472,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**# Preprocessing and Training Data Workflow**\n",
+    "Summary **[Salvador Robles]** - **PREPROCESSING AND TRAINING DATA**\n",
     "\n",
-    "**Background**\n",
+    "To explore potential models that give us insights about ticket price, we first set a baseline metric of how good taking the average price ticket would be. This gave a mean absolute error on the train split of \\$18 and \\\\$19 on the test split.\n",
     "\n",
-    "In this process, the input data (still containing several missing values) has been used to compare several models on the task to predict the ticket&#39;s price value, both on training data and test data.\n",
+    "We first built a linear regression model, imputing the missing values with the median, standard scaling variables and using cross validation. This steps determined that there were 8 best features in the dataset:\n",
     "\n",
-    "For each model we analyzed their _coefficient of determination (r square)_, _mean average error (MAE),_ and _mean standard error(MSE)_), as metrics to interpret the models' accuracy to predict the ticket's price.\n",
+    "vertical drop\n",
+    "area covered by snow making\n",
+    "total number of chairs\n",
+    "number of fastQuads\n",
+    "number of runs\n",
+    "the length of the longest run\n",
+    "the number of trams\n",
+    "the total skiable terrain area\n",
     "\n",
-    "It is necessary to highlight that the accuracy of a model is not only determined by the model used, but also by the nº of features input into it, the nº of cross validation folds made on the data, the values used to fill the missing observations, and the size of the train/test set. In relation with these factors:\n",
+    "With Cross-validation, the mean absolute error was \\$10.50 with a standard deviation of \\\\$1.62. The mean absolute error in test split was \\\\\\$11.79, which is consistent with the train split.\n",
     "\n",
-    "  - _For the nº of features, we have input all the features available._\n",
-    "  - _For the nº of cross validation folds, we have performed 5 folds._\n",
-    "  - _For the value used to fill missing observations, we have used the median and the mean._\n",
-    "  - _For the train/test proportion, we have made a 70/30 split of the dataset._\n",
+    "Additionally, we built a random forest regressor, imputing values with the median, and trying scaling and non-scaling variables. Cross-Validation deterined that non-scaling was preferable, and increased the nº of trees set by default. Cross-validation mean absolute error was \\$9.66 with a standard deviation of \\\\$1.35. The mean absolute error calculated on the hold-out test set was \\\\\\$9.50, this is consistent with the cross-validation estimate.\n",
     "\n",
-    "**Baseline model:**\n",
-    "\n",
-    "**Baseline model:** This model is set as baseline model to predict the ticket&#39;s price; we have used the average ticket price of the set as predictor (i.e. USD63.90). Therefore, following this approach, this model would predict the ticket price to always be USD63.90.\n",
-    "\n",
-    "- The r square shows a result of 0 on train data (TD), and -0.0007 on test data (td). The MAE shows 18.04 on TD and 18.78 on td, and the MSE shows USD608 on TD and USD587 on td, which rooted is USD24.66 for TD and USD24.23 on td.\n",
-    "- The features explain 0% of variance on ticket price and following this model, we would be on average off by 18 when guessing the ticket price, with a +/- USD24 standard deviation from the average (USD63.90).\n",
-    "\n",
-    "| **Baseline (mean)** | **Training Data** | **Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| R2 | 0,00 | negative |\n",
-    "| --- | --- | --- |\n",
-    "| MAE | 18,04 | 18,78 |\n",
-    "| MSE | 608,27 | 587,31 |\n",
-    "\n",
-    "**Linear model and Random Forest:**\n",
-    "\n",
-    "**Linear Regression:** This model used all features, escalation of features, fill of missing values using median and mean, and no cross validation:\n",
-    "\n",
-    "- Median as value to fill missing data:\n",
-    "- The r square value is USD0.83 for TD and USD0.17 for td, the MAE for the TD is USD8.06 and USD12.21 for td, the MSE is USD98.68 for TD and USD484.25 for td.\n",
-    "- Mean as value to fill missing data:\n",
-    "- The r square value is 0.83 for TD and 0.10 for td, the MAE for the TD is USD8.09 and USD12.27 for td, the MSE is USD98.77 for TD and USD524.85 for td.\n",
-    "- Results do not differ in accuracy when using the mean or median, the big difference between MSE between the train data and test data suggest there is overfitting.\n",
-    "\n",
-    "| **Linear Regression +**  **scale**  **+ Median/Mean Impute** | **Training Data** | **Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - median | 0,83 | 0,17 |\n",
-    "| --- | --- | --- |\n",
-    "| MAE - median | 8,06 | 12,21 |\n",
-    "| MSE - median | 98,68 | 484,25 |\n",
-    "| R2 - mean | 0,83 | 0,10 |\n",
-    "| --- | --- | --- |\n",
-    "| MAE - mean | 8,09 | 12,27 |\n",
-    "| MSE - mean | 98,77 | 524,85 |\n",
-    "\n",
-    "**Linear Regression (refined – reduce nº of features in the model + cross validation):** To solve the apparent overfitting, we proceeded to automatically select the K-Best features, based on a scoring function, this is, that the model finds the best features by trying to maximize the r square value:\n",
-    "\n",
-    "- First tryout (k=10) – The model performance is worse than before, when it used all the features.\n",
-    "- We force a (k=15) – The r square is .77 in TD and .02 in td.\n",
-    "\n",
-    "| **LR + Median + Scaler +**  **SelectKBest** | **Training Data** | **Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - k=10 | 0,77 | 0,02 |\n",
-    "| --- | --- | --- |\n",
-    "| MAE - k=10 | 9,24 | 13,44 |\n",
-    "| MSE - k=10 |   |   |\n",
-    "| R2 - k=15 | 0,77 | 0,01 |\n",
-    "| --- | --- | --- |\n",
-    "| MAE - k=15 | 9,29 | 13,58 |\n",
-    "| MSE - k=15 |   |   |\n",
-    "\n",
-    "**Linear Regression (refined -**  **added cross validation**** ):** We introduce cross validation as a preprocessing step:\n",
-    "\n",
-    "- We perform a 5-fold on the (k=15) – Its mean r square is 0.69.\n",
-    "- We apply an automatic system to detect the best parameters, this is, those than provide the highest explanation of the ticket's price variance across the TD, our findings is that the accuracy of the model is almost at it&#39;s best with only 8 parameters, and even though accuracy increases by adding more, also the variability of results does, so in practice, it could be interesting to input to the model the 8 best parameters.\n",
-    "\n",
-    "| **LR + BestK=15+Scaler+Median +**  **CV=5** | **Training Data** | **Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - avg | 0,69 |   |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - std | 0,81 |   |\n",
-    "| MSE\\*\\*2 - median |   |   |\n",
-    "\n",
-    "**Random Forest:** This model is input with the median value to impute missing observations, data is scaled and random forest regressor is set at 47, with 5 folds on TD.\n",
-    "\n",
-    "- The mean r square of the folds shows a result of 0.66 with a std of 0.04\n",
-    "\n",
-    "| **RF + Randomstate=47+Scaler+Median+**** CV=5 **|** Training Data **|** Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - avg | 0,661 |   |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - std | 0,045 |   |\n",
-    "| MSE\\*\\*2 - median |   |   |\n",
-    "\n",
-    "- We use an automatic system to detect what is the best value to fill the missing values, the mean or the median, as well as if it is useful to scale the values. This shows that the **accuracy improves with the median but scaling the factors does not help to improve the model&#39;s accuracy.**\n",
-    "- With the median and without scaling the factors, the mean r square of the folds is 0.66 with a std of .05\n",
-    "\n",
-    "| **RF + Randomstate=47+Scaler+Median+CV=5+**** GridSearchCV **|** Training Data **|** Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - avg | 0,668 |   |\n",
-    "| --- | --- | --- |\n",
-    "| R2 - std | 0,055 |   |\n",
-    "| MSE\\*\\*2 - median |   |   |\n",
-    "\n",
-    "**Final comparison between Linear Regression and Random Forest:** Both models are compared by imputing the median for missing values, and with a score function based on the MAE, with 5 folds in the TD). **The results are the following:**\n",
-    "\n",
-    "| **LR - Final tunning grid** | **Training Data** | **Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| MAE mean | 10,4 | 12,2 |\n",
-    "| --- | --- | --- |\n",
-    "| MAE std | 0,55 |   |\n",
-    "| **RF - Final tunning grid** | **Training Data** | **Test Data** |\n",
-    "| --- | --- | --- |\n",
-    "| MAE mean | 10,21 | 8,97 |\n",
-    "| --- | --- | --- |\n",
-    "| MAE std | 0,69 |   |\n",
-    "\n",
-    "**Conclusions:**\n",
-    "\n",
-    "- The Linear Regressor had an r2 of .77 with MAE of USD9.24 in TD // r2 of .02 and MAE of USD13.44.\n",
-    "- After including cross validation in the TD, the r2 on TD fell to .69 with an std of .81, but this would also derive in an increase in the td estimations, from .02 to around 0.6.\n",
-    "- The Random Forest model had an r2 of .661 and std of .045, after applying the Gridsearch, the average r2 improved slightly to .668, but also std raised to 0.055\n",
-    "- To compare both models, we have compared the mean average errors:\n",
-    "- The Linear model had a higher MEA in both TD and td, but lower MAE std in TD.\n",
-    "- The Random Forest model had a lower MEA in both TD and td, but a higher MAE std in TD.\n",
-    "- As a result of this, we have decided to proceed with the Random Forest model, as it has a higher accuracy than the Linear Model.\n",
-    "- In terms of improvement, analysis of CV scores suggest that the models may perform better with fewer, but more explanatory variables. In particular, the following 4 variables are the ones more significant in terms of CV score results (fastQuads - Runs - Snow Making\\_ac - vertical\\_drop.)"
+    "The linear model provided with a good estimate, using only 8 features. However, the random forest model has been chosen to continue the business modelling work. The reason for this is that its estimate is closer to the \"correct\" price by \\$1 on average. This differece can scale significantly with increasing nº of visitors and days per visitor over the season."
    ]
   }
  ],
